<?xml version="1.0"?>
<package format="2">
  <name>agv_waypoints</name>
  <version>0.1.0</version>
  <description>

     agv_waypoints

  </description>
  <maintainer email="cedric.godin@usherbrooke.ca">Cedric Godin</maintainer>
  <author>Cedric Godin</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>libqt5-widgets</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
</package>
